# agentic-ai-voyage

./: .env  .gitignore  config.yaml  pyproject.toml  requirements.txt  run_app.bat
projects/deep-research/: deep_websearch_agent.py  email_agent.py  search_planner_agent.py  search_ui.py  web_search_agent.py
projects/who-am-ai/: app.py  app_fixed.py  requirements.txt
src/main/: explore.ipynb
src/main/initials/: evaluate-rerun.ipynb  prompt_chain_agentic_ai.py
src/main/models/: modelloader.py
src/main/openai/: openaiexplore.py
src/main/projects/: who-am-ai.py
src/main/trials/: evaluate-rerun.ipynb  openai-agent-sdk.ipynb  requirements.txt
src/main/trials/b_open_sdk/: c_openai-agent-sdk.ipynb  d_openai_sdk-sales-manager.py
