[project]
name = "agentic-ai-voyage"
version = "0.1.0"
description = "AI Voyage project for agentic AI development"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "python-dotenv",
    "openai",
    "ipykernel",
    "tensorflow-cpu==2.12.0",
    "agents",
    "langchain",
    "pandas",
    "numpy",
    "jupyter",
    "notebook"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "matplotlib",
    "seaborn"
]
